src/tests/snapshots/niri__tests__window_opening__check_target_output_and_row@ws2-out1-fsT-wfsA2-spA2.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: A2\nset parent: A2\nconfig:\noutput \"headless-2\" {\n    layout {\n        border {\n            on\n        }\n    }\n}\n\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n\n    layout {\n        border {\n            width 10\n        }\n\n        default-column-width {\n            fixed 500\n        }\n    }\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-workspace \"ws-2\"\n    open-on-output \"headless-1\"\n    open-fullscreen true\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-2\"\n}"
expression: snapshot
---
final monitor: headless-2
final row: 0 (unnamed)

initial configure:
size: 1920 × 1080, bounds: 1880 × 1040, states: [Fullscreen]

post-map configures:
size: 1920 × 1080, bounds: 1880 × 1040, states: [Fullscreen]

unfullscreen configure:
size: 928 × 1040, bounds: 1880 × 1040, states: []
